[tool.poetry]
name = "geomap"
version = "0.1.0"
description = ""
authors = ["Denys.Shkliarenko <denys.shkliarenko@ecentria.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.25.2"
geopandas = "^0.13.2"
jupyterlab = "^4.0.5"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
